--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   <body>
     <div id="map-canvas"></div>
     <div id="legend">
-        <span class="grande">Grande</span>
+        <span class="grande">Grande Power 1000</span>
         <br />
-        <span class="att">AT&amp;T</span>
+        <span class="att">AT&amp;T Gigapower</span>
         <br />
         <span class="both">Both</span>
     </div>
